src/objects/FSL__Scheduling_Policy__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Clustering_Weight__c</fullName>
        <label>Service Clustering Weight (Closed Pilot)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Priority_Weight__c</fullName>
        <label>Service Priority Weight (Closed Pilot)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Mode (Closed Pilot)</label>
        <type>Checkbox</type>
    </fields>
    <label>Scheduling Policy</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Scheduling Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling Policies</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Deny_Objectives_Negative_Weight</fullName>
        <active>true</active>
        <errorConditionFormula>OR(FSL__Service_Clustering_Weight__c &lt; 0,FSL__Service_Priority_Weight__c &lt; 0)</errorConditionFormula>
        <errorMessage>Policy objectives weight can not be negative</errorMessage>
    </validationRules>
</CustomObject>